--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
+    "@rooks/use-boundingclientrect": "^4.11.2",
+    "@rooks/use-outside-click": "^4.11.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@wbe/use-bounding-client-rect": "^2.7.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-overlays": "^5.2.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "sass": "^1.58.0",
     "tailwindcss": "^3.2.4"
   },
   "ts-standard": {
